apps/E-commerce/src/styles.css
/* ... */
html[dir='rtl'] .iti input {
  direction: rtl !important;
  text-align: right !important;
  padding-right: 55px !important;
  padding-left: 12px !important;
}

html[dir='rtl'] .iti__flag-container {
  position: absolute !important;
  right: 0 !important;
  left: auto !important;
}

html[dir='rtl'] .iti__country-list {
  right: 0 !important;
  left: auto !important;
  text-align: right;
}

html[dir='rtl'] .iti--allow-dropdown input {
  padding-right: 60px !important;
  padding-left: 12px !important;
}

.iti__country:hover,
.iti__country.iti__highlight {
  background-color: var(--color-maroon-500) !important;
  color: white !important;
}

.dark .iti__country:hover,
.dark .iti__country.iti__highlight {
  background-color: var(--color-soft-pink-500) !important;
  color: var(--color-zinc-950) !important;
}

.iti__country:hover .iti__country-name,
.iti__country:hover .iti__dial-code,
.iti__country.iti__highlight .iti__country-name,
.iti__country.iti__highlight .iti__dial-code {
  color: inherit !important;
}

.dark .iti__country-list {
  @apply bg-zinc-800 border-zinc-700;
  color: var(--color-zinc-100);
}

html[dir='rtl'] .iti .iti__dropdown-content {
  left: auto !important;
  right: 0 !important;
}

.dark .iti__country-name {
  color: var(--color-zinc-100) !important;
}

.dark .iti__dial-code {
  color: var(--color-zinc-400) !important;
}

.dark .iti__country:hover .iti__country-name,
.dark .iti__country:hover .iti__dial-code,
.dark .iti__country.iti__highlight .iti__country-name,
.dark .iti__country.iti__highlight .iti__dial-code {
  color: var(--color-zinc-950) !important;
}

.dark .iti__country-list {
  background-color: var(--color-zinc-800) !important;
}

.dark .iti__dropdown-content {
  background-color: var(--color-zinc-800) !important;
  border-color: var(--color-zinc-700) !important;
}

.dark .iti__divider {
  border-bottom: 1px solid var(--color-zinc-700) !important;
}

.p-menu {
  z-index: 9999 !important;
}
.p-menu-overlay,
.p-menu,
.p-component-overlay,
.p-motion {
  display: block !important;
}

@utility about-feature-item {
  @apply flex items-center gap-3;
}

@utility about-feature-icon-box {
  @apply w-4 h-4 rounded-full flex items-center justify-center;
}

@utility about-feature-icon {
  @apply text-maroon-700 dark:text-soft-pink-200 font-bold text-[10px];
}

@utility about-feature-text {
  @apply text-zinc-700 dark:text-zinc-300 text-xs font-semibold;
}

